# bgftool

./: Cargo.toml  README.md
src/: bgf.rs  conf.rs  lib.rs  main.rs
src/dither/: mod.rs  pcg_noise.rs  r2_blue_noise.rs
