[package]
name = "bgftool"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
color-eyre = "0.6.5"
flate2 = { version = "1.1.2", default-features = false, features = ["zlib-rs"] }
image = "0.25.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
